--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "express-p7-free-epicgame-mail",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "prod": "npm run build && npm start"
+    "prod": "npm run build && npm start",
+    "vercel-build": "npm run build"
+
   },
   "keywords": [],
   "author": "",
